  with a custom Collector these experimental methods make it possible
  to gather the hit-count per sub-clause and per document while a
  search is running.  (Simon Willnauer, Mike McCandless)

* LUCENE-2636: Added ChainingCollector which allows chaining several Collectors
  together and be passed to IndexSearcher.search methods. (Shai Erera)

Optimizations

* LUCENE-2410: ~20% speedup on exact (slop=0) PhraseQuery matching.
  (Mike McCandless)

* LUCENE-2531: Fix issue when sorting by a String field that was
  causing too many fallbacks to compare-by-value (instead of by-ord).
  (Mike McCandless)

* LUCENE-2574: IndexInput exposes copyBytes(IndexOutput, long) to allow for 
  efficient copying by sub-classes. Optimized copy is implemented for RAM and FS
  streams. (Shai Erera)

* LUCENE-2588: Don't store unecessary suffixes when writing the terms
  index, saving RAM in IndexReader; change default terms index
  interval from 128 to 32, because the terms index now requires much
  less RAM.  (Robert Muir, Mike McCandless)

Documentation

* LUCENE-2579: Fix oal.search's package.html description of abstract
  methods.  (Santiago M. Mola via Mike McCandless)
  
* LUCENE-2239: Documented limitations in NIOFSDirectory and MMapDirectory due to
  Java NOI behavior when a Thread is interrupted while blocking on IO.
  (Simon Willnauer, Robert Muir)

Bug fixes

* LUCENE-2633: PackedInts Packed32 and Packed64 did not support internal
  structures larger than 256MB (Toke Eskildsen via Mike McCandless)

======================= Lucene 3.x (not yet released) =======================

Changes in backwards compatibility policy

* LUCENE-1483: Removed utility class oal.util.SorterTemplate; this
  class is no longer used by Lucene.  (Gunnar Wagenknecht via Mike
  McCandless)

* LUCENE-1923: Renamed SegmentInfo & SegmentInfos segString method to
  toString.  These are advanced APIs and subject to change suddenly.
  (Tim Smith via Mike McCandless)
