@@ -216,6 +216,11 @@ New features
 * LUCENE-2636: Added ChainingCollector which allows chaining several Collectors
   together and be passed to IndexSearcher.search methods. (Shai Erera)
 
+* LUCENE-2504: FieldComparator.setNextReader now returns a
+  FieldComparator instance.  You can "return this", to just reuse the
+  same instance, or you can return a comparator optimized to the new
+  segment.  (yonik, Mike McCandless)
+
 Optimizations
 
 * LUCENE-2410: ~20% speedup on exact (slop=0) PhraseQuery matching.
